# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20250620040819_make_satus_not_null_in_subscriptions.sql  20250620041042_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: domain.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
