[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
config = "0.13"
log = "0.4"
once_cell = "1.19"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]  }
tracing = {version = "0.1", features = ["log"]}
tracing-log = "0.2"
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
unicode-segmentation = "1.10"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
validator = "0.16"

[dev-dependencies]
claims = "0.7"
fake = "~2.3"
reqwest = "0.11"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"